labs/07-gipfel-killer-sh/lab-02-gateway-api/httproute-paths.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-paths
spec:
  parentRefs:
    - name: internal-gateway
  hostnames:
    - "portal.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mobile
      backendRefs:
        - name: mobile-svc
          port: 8080
    - matches:
        - headers:
            - name: env
              value: canary
      backendRefs:
        - name: canary-service
          port: 8080
